fix: background bleed through at slider left edge

--- a/src/components/Toggle.css
+++ b/src/components/Toggle.css
@@ -1,7 +1,10 @@
 :root {
     --toggle-width: 900px;
     --toggle-height: 80px;
+    --toggle-border-width: 2px;
+
     --slider-width: calc(var(--toggle-width) / 2);
+    --slider-height: calc(var(--toggle-height));
 }
 
 *, *::before, *::after {
@@ -19,7 +22,7 @@
     width: var(--toggle-width);
     height: var(--toggle-height);
 
-    border: 2px solid lightgray;
+    border: var(--toggle-border-width) solid lightgray;
     background-color: red;
 }
 
@@ -42,10 +45,10 @@
 .slider::before {
     position: absolute;
     content: "";
-    height: var(--toggle-height);
+    height: var(--slider-height);
     width: var(--slider-width);
-    left: 0;
-    bottom: 0;
+    left: calc(-1 * var(--toggle-border-width));
+    bottom: calc(-1 * var(--toggle-border-width));
 
     background-color: lightgray;
     transition: 0.2s;
